# Master_Thesis

./: .gitignore  JESSENNE_Martin_Projet1.ipynb  JESSENNE_Martin_Projet1.py  MatrixGame.py  OMWU.ipynb  pyproject.toml
Optigame/: Cargo.toml  analysis.py  pyproject.toml
Optigame/.cargo/: config.toml
Optigame/src/: experiments.rs  lib.rs  main.rs  math.rs  optimizers.rs
Optigame_old/: Cargo.toml
Optigame_old/src/: lib.rs
Scripts/: analysis.py
__marimo__/session/: MatrixGame.py.json
