[package]
name = "optigame"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "optigame"
crate-type = ["cdylib"]

[dependencies]
numpy = "0.28.0"
pyo3 = { version = "0.28.2", features = ["extension-module"] }
